src/mdfserver/static/mdfserver/css/custom_style.css
/* ... */
.carousel-control span {
    width: auto;
    height: auto;
    position: absolute;
    left: 7px;
    /* top: 6%;*/
    top: 0.11cm;
}

#site_select {
    position: fixed;
    z-index: 20;
    top: 86px;
    height: 0px;
}

#st_select {
    float: right;
}

@media screen\0  {
    .carousel-control span {
        top: 0.2cm;
    !important
    }
}

@-moz-document url-prefix() {
    .carousel-control span {
        top: 0.2cm;
    !important
    }
}

.carousel-control.right span {
    margin-left: 9px;
    left: 2px;
}

.carousel-control {
    top: 46%;
    padding-top: 4px;
    padding-right: 5px;
    width: 33px;
    height: 35px;
    border-radius: 71px;
}

.carousel-caption {
    border-top-left-radius: 2px;
    border-top-right-radius: 2px;
    color: #333;
}

#big_image {
    width: 939px;
    height: 404px;
    height: 441px;
    overflow: hidden;
    margin-top: 9px;
}

.big_image {
    height: 440px;
    overflow: hidden;
    margin-left: -16%;
}

#big_image img {
    width: 100%;
}

.image_msg {
    margin-top: -40px;
    width: 940px;
    background-color: white;
    position: relative;
    opacity: 0.6;
    z-index: 1;
    border-radius: 5px;
    color: black;
    padding-top: 5px;
}

.image_msg span {
    opacity: 1;
}

#spacer {
    padding-top: 111px;
}

#slider {
    margin: 0%;
    width: 1080px;
}

#site_content {
    padding-top: 20px;
    padding-bottom: 20px;
    min-height: 575px;
}

/*Experimenting from here on*/

* {
    margin: 0;
    padding: 0;
}

/* tell the browser to render HTML 5 elements as block */

article, aside, figure, footer, header, hgroup, nav, section {
    display: block;
}

.column_left {
    width: 350px;
    float: left;
}

.column_right {
    width: 460px;
    float: right;
    border-left: 1px dotted lightblue;
    padding-left: 30px;
}

body {
    font: normal .80em arial, sans-serif;
    color: #444;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif !important;
    background-color: #C2DBE8;
    /* IE10 Consumer Preview*/
    background-image: -ms-linear-gradient(top, #FFFFFF 0%, #F5F5F5 100%);

    /* Mozilla Firefox*/
    background-image: -moz-linear-gradient(top, #FFFFFF 0%, #F5F5F5 100%);

    /* Opera*/
    background-image: -o-linear-gradient(top, #FFFFFF 0%, #F5F5F5 100%);

    /* Webkit (Safari/Chrome 10)*/
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #F5F5F5));

    /* Webkit (Chrome 11+)*/
    background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #F5F5F5 100%);

    /* W3C Markup, IE10 Release Preview */
    background-image: linear-gradient(to bottom, #FFFFFF 0%, #F5F5F5 100%);
    background-repeat: no-repeat;
    background-attachment: fixed;
}

p {
    padding: 0 0 20px 0;
    line-height: 1.7em;
    text-align: justify;
}

.sideImage ~ p ~ h2 {
    margin-top: 26px;
}

.dropdown-menu {
    border-radius: 3px;
    margin-top: 0;
    border-top: 1px #f2f2f2 solid;;
}

#content p {
    font-size: 12px;
}

h2 + p {
    border-top-style: groove;
    border-top-left-radius: 4px;
    border-top-right-radius: 10px;
    margin-top: -12px;
}

img {
    border: 0;
    max-width: 1800px;
}

a img {
    max-width: 100%;
}

h1, h2, h3, h4, h5, h6 {
    color: #425766;
    letter-spacing: 0em;

}

table {
    border: 1px dotted #fff;
}

.site_data table th {
    text-align: right;
    border: 1px solid #e7e7e7;
    border-right: 1px solid transparent;
    text-align: left;

}

.site_data table td {
    padding-left: 5px;
    border: 1px solid #e7e7e7;
    text-align: left;

}

.site_data table {
    margin-top: 25px;
    height: 344px;
    border-collapse: collapse;
    /*border: 1px solid #ddd;*/
    background: transparent; /*#e7e7e7;*/
}

th {
    padding: 7px 11px;
    font-weight: bold;
    font-size: 14px;

}

.plain-table {
    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
    font-size: 12px;
    margin: 20px 0px;
    width: 100%;
    text-align: left;
    border: 1px solid #ddd;
}

.plain-table a {
    color: #444;
    text-decoration: underline;

    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
    font-size: 12px;
}

td {
    padding: 7px 25px;
    border-top: 1px dashed #fff;
}

h1, h2, h3 {
    font: normal 180% "Lucida Sans Unicode", "Lucida Grande", sans-serif;

}

h3 {
    font-size: 140%;
    padding: 5px 0 0 0;
}

h4, h6 {
    color: #F67400;
    padding: 0 0 5px 0;
    font: normal 130% arial, sans-serif;
}

h5, h6 {
    color: #555;
    font: italic 95% arial, sans-serif;
    letter-spacing: normal;
    padding: 0 0 15px 0;
}

.icon-prev, .icon-next {
    vertical-align: middle;
!important
}

/*[class^='icon-'], [class*=' icon-'] {
    margin-top: -14px;
    padding-bottom: 14px;
}*/

a, a:hover {
    outline: none;
    text-decoration: underline;
    color: inherit;
}

a {
    text-decoration: none;
}

a:hover {
    color: #00A5E3;
}

.region-content {
    margin-left: 15px;
    margin-right: 15px;
    padding-top: 10px;

}

strong {
    color: #425766;
}

a {
    color: #6F8A9E;
}

h1 {
    font-size: 29px;
}

h2 {
    font-size: 22px;
    border-bottom: 2px lightgray;
    border-bottom-style: solid;
    border-bottom-style: groove;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 10px;
}

h3 {
    font-size: 18px;
}

#main, nav, #container, #logo, #site_content, footer {
    margin-left: auto;
    margin-right: auto;
}

#main {
    margin: 5px auto;
    background: transparent;
    padding-bottom: 30px;
}

header {
    background: transparent;
    height: 110px;
}

.contacts-box {
    text-align: center;
}

.contact-info {
    float: left;
    width: 33.33%;
    margin-bottom: 70px;
}
/* ... */

